# Code-Archive

./: README.md
2023 Competition/: README.md
2023 Competition/Team_AI@UoM/: README.md
2023 Competition/Team_AI@UoM/bc291e6e9cbb9e228ac678b345ddae832ebfd866/: LICENSE_PARTICIPANT
2023 Competition/Team_AIRLAB/: README.md
2023 Competition/Team_AIRLAB/0c8f9a7409656ea724343f6e47b06fc7689ba4e4/: LICENSE_PARTICIPANT
2023 Competition/Team_AIRLAB/1737e199ff73c29b77c0ff45d15f0c24069ac4c3/: LICENSE_PARTICIPANT  RunInDocker.sh
2023 Competition/Team_AUGUR/: README.md
2023 Competition/Team_AUGUR/ed070450b3d75a4ec6675628a2dbc2f2c59f3a70/: LICENSE_PARTICIPANT
2023 Competition/Team_Asher/: README.md
2023 Competition/Team_Asher/8577f15a4f647991a02399e944a7a7fd88a34865/: CMakeLists.txt  compile-debug.sh  compile.sh
2023 Competition/Team_Asher/8577f15a4f647991a02399e944a7a7fd88a34865/inc/: MAPFPlanner.h
2023 Competition/Team_Asher/8577f15a4f647991a02399e944a7a7fd88a34865/inc/ash/: astar.hpp  astar_planner.hpp  constraint_set.hpp  heuristic.hpp  hybrid_planner.hpp  preprocess.hpp  push_planner.hpp  push_search.hpp  utils.hpp
2023 Competition/Team_Asher/8577f15a4f647991a02399e944a7a7fd88a34865/src/: MAPFPlanner.cpp
2023 Competition/Team_Asher/8577f15a4f647991a02399e944a7a7fd88a34865/src/ash/: astar.cpp  astar_planner.cpp  constraint_set.cpp  heuristic.cpp  hybrid_planner.cpp  preprocess.cpp  push_planner.cpp  push_search.cpp  utils.cpp
2023 Competition/Team_Asher/8577f15a4f647991a02399e944a7a7fd88a34865/src/ash_testing/: testing1.cpp  testing2.cpp  testing3.cpp  testing4.cpp  testing5.cpp
2023 Competition/Team_Asher/8577f15a4f647991a02399e944a7a7fd88a34865/utils/: ebf.py  quick_eval.py
2023 Competition/Team_GPUfree/: README.md
2023 Competition/Team_GPUfree/09b8acb07eb8c51448745a14a85e036acaf334cf/: model.onnx
2023 Competition/Team_GPUfree/760ac48289c4faa4ce05104e7f59a0943b8f41c1/: CMakeLists.txt
2023 Competition/Team_HCP/: README.md
2023 Competition/Team_HCP/1f5822747a7928cf83f473cada7ada91bb0d5f6b/: apt.txt
2023 Competition/Team_HCP/c1da9a3c79d77b9aa0aaa93d3ba0c6371139fed0/: LICENSE_PARTICIPANT
2023 Competition/Team_JHC/: README.md
2023 Competition/Team_JHC/e1d88ca7a64f827923ec5678446e0676ca919e20/: README.md  config.yaml
2023 Competition/Team_JOliver/: README.md
2023 Competition/Team_Márton_Ambrus-Dobai/: README.md
2023 Competition/Team_Márton_Ambrus-Dobai/a5f56865fd239b6894f3377e79f2552fa6f113c9/: CMakeLists.txt  LICENSE_PARTICIPANT  compile.sh
2023 Competition/Team_NCD-MIPT/: README.md
2023 Competition/Team_NCD-MIPT/56e4ab68073d6ebced72e72ac802875611344750/: CMakeLists.txt  draw-with-coord.py  draw.py  draw_paths.py  draw_paths_steps.py
2023 Competition/Team_NCD-MIPT/64eb17e9395e9d0680aba75a6f08f705ae5f2d09/: CMakeLists.txt
2023 Competition/Team_NCU_ASAI_LAB/: README.md
2023 Competition/Team_NCU_ASAI_LAB/70a0b3ba5b9ee6c7284e4ad8c04b214b52175b38/: compile.sh
2023 Competition/Team_NoEyeDeer/: README.md
2023 Competition/Team_NoEyeDeer/d74ae44d0d0eade307b78cb4248af54ea37df7dd/: CMakeLists.txt  build_debug.sh  build_debug_verbose.sh  build_release.sh  build_release_debuginfo.sh  run.sh  test.json  time_analy.py
2023 Competition/Team_NoEyeDeer/d74ae44d0d0eade307b78cb4248af54ea37df7dd/example_problems/tests.domain/: simple_4.json
2023 Competition/Team_NoEyeDeer/d74ae44d0d0eade307b78cb4248af54ea37df7dd/example_problems/tests.domain/agents/: simple_4.agents
2023 Competition/Team_NoEyeDeer/d74ae44d0d0eade307b78cb4248af54ea37df7dd/example_problems/tests.domain/maps/: center-3-3.map  empty-3-3.map  empty-5-5.map  simple-3-3.map
2023 Competition/Team_NoEyeDeer/d74ae44d0d0eade307b78cb4248af54ea37df7dd/example_problems/tests.domain/tasks/: simple-5-5-4-10.tasks
2023 Competition/Team_NoEyeDeer/d74ae44d0d0eade307b78cb4248af54ea37df7dd/inc/: MAPFPlanner.h  ecbs.h  sipp.h  threadpool.h
2023 Competition/Team_NoEyeDeer/d74ae44d0d0eade307b78cb4248af54ea37df7dd/src/: MAPFPlanner.cpp  ecbs.cpp  sipp.cpp
2023 Competition/Team_NoEyeDeer/d74ae44d0d0eade307b78cb4248af54ea37df7dd/tests/: test_intervals.cpp  test_sipp.cpp
2023 Competition/Team_ORunner/: README.md
2023 Competition/Team_ORunner/37a593ab304f104b3b2732b112034a4ccd14d92a/: LICENSE_PARTICIPANT
2023 Competition/Team_Pikachu/: README.md
2023 Competition/Team_Pikachu/0a78c9bf0d3416e85ac5caf3f61c46bb19754a47/: CMakeLists.txt  README_DEV.md  apt.txt  run.sh  viz.sh
2023 Competition/Team_Pikachu/2bf88d26affb60adfdb00aa3efa5f1e70e2f36a2/: run_test.sh
2023 Competition/Team_Pikachu/5746db6f1af6f942c48b7a35fe882bbba3c08119/: README_DEV.md  run.sh  viz.sh
2023 Competition/Team_Potassco/: README.md
2023 Competition/Team_Potassco/102f54502b24fb48ea5cf8577682d1f059005dcc/: CMakeLists.txt  LICENSE_PARTICIPANT  apt.txt  compile.sh
2023 Competition/Team_Qazser/: README.md
2023 Competition/Team_Qazser/c4dcfe02b157517e9129a7719858db3f963c098b/: apt.txt  compile.sh
2023 Competition/Team_RMR/: README.md
2023 Competition/Team_RMR/692977662cc339c81727d6ad91d7437ef7f4a6f6/: LICENSE_PARTICIPANT
2023 Competition/Team_Shadoks/: README.md
2023 Competition/Team_Shadoks/1248faae2d47f7616224775a0dcafa008c55900a/: CMakeLists.txt
2023 Competition/Team_Shadoks/7b688b1517fde2658da138588bb33b4bd31d5b00/: LICENSE
2023 Competition/Team_Shadoks/96b5b93f542d2d8078529ac1504f3e4a18583405/: compile.sh
2023 Competition/Team_Shadoks/9e3860eafc92350d3d694383e90f13a12c6d4622/: notes-Aldo.md
2023 Competition/Team_Shadoks/a34a20e24d5ff7a7ab8ae2f5930cb063f3e06478/: CMakeLists.txt  LICENSE_PARTICIPANT  notes-Aldo.md
2023 Competition/Team_UJI_MIR_Multirobots_Leo-Rafa/: README.md
2023 Competition/Team_UJI_MIR_Multirobots_Leo-Rafa/72bf8ec2aa2ff4a23502960f4cba07510d1937dc/: LICENSE_PARTICIPANT  LICENSE_ROBOT_RUNNER
2023 Competition/Team_UJI_team1/: README.md
2023 Competition/Team_UJI_team1/7711bf4d2d1c7bbdb4e77df76e7aa1e293191a29/: LICENSE_PARTICIPANT  compile_and_run.sh
2023 Competition/Team_W/: README.md
2023 Competition/Team_Zhixi-Li/: README.md
2023 Competition/Team_xInn/: README.md
(+338 files in other folders)
